tests/ui/delegation/generics/free-fn-to-free-fn.stderr
error[E0277]: the trait bound `S: Clone` is not satisfied
  --> $DIR/free-fn-to-free-fn.rs:23:12
   |
LL |     bounds(S);
   |     ------ ^ the trait `Clone` is not implemented for `S`
   |     |
   |     required by a bound introduced by this call
   |
note: required by a bound in `bounds`
  --> $DIR/free-fn-to-free-fn.rs:11:22
   |
LL |     pub fn bounds<T: Clone>(_: T) {}
   |                      ^^^^^ required by this bound in `bounds`
...
LL | reuse to_reuse::bounds;
   |                 ------ required by a bound in this function
help: consider annotating `S` with `#[derive(Clone)]`
   |
LL +     #[derive(Clone)]
LL |     struct S;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
